[gd_scene load_steps=12 format=2]

[ext_resource path="res://Pause_Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "selected"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.552941, 0.552941, 1 ), Color( 0.901961, 0.72549, 0.47451, 1 ), Color( 1, 1, 1, 1 ), Color( 0.976471, 0.866667, 0.529412, 1 ), Color( 0.901961, 0.662745, 0.380392, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "selected"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.552941, 0.552941, 1 ), Color( 0.901961, 0.72549, 0.47451, 1 ), Color( 1, 1, 1, 1 ), Color( 0.976471, 0.866667, 0.529412, 1 ), Color( 0.901961, 0.662745, 0.380392, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "selected"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.552941, 0.552941, 1 ), Color( 0.901961, 0.72549, 0.47451, 1 ), Color( 1, 1, 1, 1 ), Color( 0.976471, 0.866667, 0.529412, 1 ), Color( 0.901961, 0.662745, 0.380392, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "selected"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.552941, 0.552941, 1 ), Color( 0.901961, 0.72549, 0.47451, 1 ), Color( 1, 1, 1, 1 ), Color( 0.976471, 0.866667, 0.529412, 1 ), Color( 0.901961, 0.662745, 0.380392, 1 ) ]
}

[node name="Pause_Menu" type="Node2D"]
pause_mode = 2
z_index = 29
z_as_relative = false
script = ExtResource( 1 )

[node name="resume" type="Label" parent="."]
modulate = Color( 0.997016, 0.983093, 0.940328, 1 )
margin_left = 212.0
margin_top = 75.0
margin_right = 256.0
margin_bottom = 91.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.91, 0.8, 0.56, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Resume"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="resume"]
anims/normal = SubResource( 2 )
anims/selected = SubResource( 3 )

[node name="quit" type="Label" parent="."]
modulate = Color( 0.997016, 0.983093, 0.940328, 1 )
margin_left = 212.0
margin_top = 113.0
margin_right = 256.0
margin_bottom = 129.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.91, 0.8, 0.56, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="quit"]
anims/normal = SubResource( 4 )
anims/selected = SubResource( 5 )

[node name="quit_confirm" type="Label" parent="."]
visible = false
modulate = Color( 0.997016, 0.983093, 0.940328, 1 )
margin_left = 139.953
margin_top = 143.116
margin_right = 328.953
margin_bottom = 159.116
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.91, 0.8, 0.56, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Are you sure you want to quit?"
align = 1
valign = 1

[node name="no" type="Label" parent="."]
visible = false
modulate = Color( 0.997016, 0.983093, 0.940328, 1 )
margin_left = 179.765
margin_top = 175.0
margin_right = 198.765
margin_bottom = 191.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.91, 0.8, 0.56, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "No"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="no"]
anims/normal = SubResource( 6 )
anims/selected = SubResource( 7 )

[node name="yes" type="Label" parent="."]
visible = false
modulate = Color( 0.997016, 0.983093, 0.940328, 1 )
margin_left = 268.0
margin_top = 175.0
margin_right = 287.0
margin_bottom = 191.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.91, 0.8, 0.56, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Yes"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="yes"]
anims/normal = SubResource( 8 )
anims/selected = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="mouse_entered" from="resume" to="." method="_on_resume_mouse_entered"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_entered" from="no" to="." method="_on_no_mouse_entered"]
[connection signal="mouse_entered" from="yes" to="." method="_on_yes_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
